[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "rusticai-{{ cookiecutter.module_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = [{name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"}]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.13,<3.14"
urls = { Homepage = "{{ cookiecutter.homepage }}", Repository = "{{ cookiecutter.repository }}", "Rustic AI Core" = "https://pypi.org/project/rusticai-core/" }


[tool.poetry]
packages = [{ include = "{{ cookiecutter.package_name }}", from = "src" }]

[tool.poetry.dependencies]
rusticai-core = { path = "{{ cookiecutter.rusticai_location }}/core", develop = true }

[tool.poetry-monorepo.deps]


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = { version = "^24.2.0", extras = ["jupyter"] }
flake8 = "^7.1.2"
tox = "^4.24.1"
isort = "^6.0.0"
mypy = "^1.15.0"
flaky = "^3.8.1"
pytest-asyncio = "^0.26.0"
rusticai-testing = {path = "{{ cookiecutter.rusticai_location }}/testing", develop = true}

[tool.poetry.extras]
test = ["pytest"]

[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
check_untyped_defs = true
plugins = "pydantic.mypy"
explicit_package_bases = true


[tool.isort]
profile = "black"
force_sort_within_sections = true # For the sorting order issues
lines_between_sections = 1 # For the newline issue
known_third_party = ["pydantic"]
known_first_party = ["rustic_ai.core"]

